Fixed Slack/FB/Amazon images overlapping on mobile issue

--- a/themes/atchai/static/src/sass/modules/_landing.sass
+++ b/themes/atchai/static/src/sass/modules/_landing.sass
@@ -59,9 +59,10 @@
         justify-content: center
         align-items: center
       .intro-logo
-        width: 18%
+        width: 20%
         &.circle
-          width: 8%
+          width: 30%
+          max-width: 70px
       .row:not(:last-of-type)
         margin-bottom: 30px
         @media only screen and (max-width: 400px)
@@ -69,15 +70,14 @@
       .row:first-of-type
         @media only screen and (max-width: 992px)
           .col-md-3, .col-md-4
-            width: 200px
+            width: 150px
             vertical-align: middle
         @media only screen and (max-width: 768px)
-          .col-md-3, .col-md-4
+          .col-md-2, .col-md-3, .col-md-4
             width: 49%
         @media only screen and (max-width: 400px)
           .col-md-3, .col-md-4
-            width: 80%
-            margin-bottom: 20px
+            width: 100%
       .col-md-2, .col-md-3, .col-md-4
         float: none
         display: inline-block
@@ -89,8 +89,7 @@
             width: 80%
             @media only screen and (max-width: 1200px)
               width: 100%
-            @media only screen and (max-width: 992px)
-              width: 100px
+
 
       a
         &:hover
